--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         extend: {
           colors: {
             clifford: '#da373d',
+            penguin: '#FFFBF0',
           }
         }
       }
@@ -22,14 +23,14 @@
   
 </head>
 <body>
-  <header class="container mx-auto sm:m-5">
-    <section>
+  <header class="bg-penguin pb-32 pt-12 ">
+    <section class="container mx-auto  sm:flex items-center justify-around">
       <div class="space-y-4">
-        <h1 class="text-5xl uppercase font-bold "> 
+        <h1 class="text-2xl sm:text-5xl uppercase font-bold "> 
           <span class="text-yellow-400"> Be the Pengulins </span> <br>
           <span> Of Winter </span>
         </h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, sit totam! Vitae, beatae explicabo. Amet, repellendus. Facere deserunt odio veritatis.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
         <button class="bg-[#AACE1F] uppercase text-white px-7 py-4 font-semibold rounded-xl"> 
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
             <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
@@ -37,8 +38,8 @@
           
           Buy Now </button>
       </div>
-      <div>
-        <img src="images/model.png" alt="">
+      <div class="pt-8 sm:pt-0">
+        <img class="w-1/2 sm:w-full" src="images/model.png" alt="">
       </div>
     </section>
   </header>
